--- a/index.html
+++ b/index.html
@@ -21,13 +21,45 @@
       margin: 1em 0;
       border: 2px solid #444;
     }
+    .side-by-side {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    .side-by-side img {
+      max-width: 300px;
+      border: 2px solid #555;
+    }
     .section {
       margin-bottom: 3em;
+    }
+    .trademark-inline {
+      height: 30px;
+      vertical-align: middle;
+      margin-left: 10px;
+    }
+    .email-button {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #ff4444;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    .email-button:hover {
+      background-color: #cc3333;
     }
   </style>
 </head>
 <body>
-  <h1>Witches Ond Warlocks™</h1>
+  <h1>Witches Ond Warlocks™
+    <img src="assets/Trademark_Label.png" alt="TM Logo" class="trademark-inline">
+  </h1>
+
   <p>This trademark is used in connection with collectible trading cards and fantasy-themed apparel.</p>
 
   <div class="section">
@@ -37,8 +69,11 @@
   </div>
 
   <div class="section">
-    <h2>✨ Foil Pack Sample</h2>
-    <img src="assets/Foil_Pack.jpg" alt="Foil Pack Sample">
+    <h2>✨ Foil Pack Samples</h2>
+    <div class="side-by-side">
+      <img src="assets/Foil_Pack.jpg" alt="Foil Pack Sample 1">
+      <img src="assets/Foil_Pack_2.jpg" alt="Foil Pack Sample 2">
+    </div>
   </div>
 
   <div class="section">
@@ -50,5 +85,7 @@
     <h2>📛 Trademark Logo</h2>
     <img src="assets/Trademark_Label.png" alt="Trademark Logo">
   </div>
+
+  <a class="email-button" href="mailto:markperry@witchesondwarlocks.com">📧 Contact Us</a>
 </body>
 </html>
