--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       flex-wrap: wrap;
     }
     .side-by-side img {
-      max-width: 75%;
+      max-width: 30%;
     }
     .trademark-inline {
-      height: 30px;
+      height: 60px;
       vertical-align: middle;
       margin-left: 10px;
     }
@@ -56,7 +56,7 @@
 <body>
   <h1>
     Witches Ond Warlocks™
-    <img src="assets/Trademark_Label.png" alt="TM Logo" class="trademark-inline" style="height: 30px;">
+    <img src="assets/Trademark_Label.png" alt="TM Logo" class="trademark-inline">
   </h1>
 
   <p>Collectible trading cards and fantasy-themed apparel.</p>
