--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       max-width: 30%;
     }
     .trademark-inline {
-      height: 60px;
+      height: 100px;
       vertical-align: middle;
       margin-left: 10px;
     }
@@ -54,6 +54,8 @@
   </style>
 </head>
 <body>
+  <h2 style="margin-top: 0; color: #ffaa00;">Become an Authorized Dealer</h2>
+
   <h1>
     Witches Ond Warlocks™
     <img src="assets/Trademark_Label.png" alt="TM Logo" class="trademark-inline">
