--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
     .email-button:hover {
       background-color: #5c0000;
     }
+    iframe {
+      max-width: 100%;
+      border-radius: 12px;
+      margin-top: 1em;
+      border: 2px solid #333;
+    }
   </style>
 </head>
 <body>
@@ -84,6 +90,16 @@
   <div class="section">
     <h2>📛 Trademark Logo</h2>
     <img src="assets/Trademark_Label.png" alt="Trademark Logo" style="max-width: 30%;">
+  </div>
+
+  <div class="section">
+    <h2>📱 Mobile App Preview</h2>
+    <iframe
+      width="100%"
+      height="600"
+      allowfullscreen
+      src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/p8dBhYROthpVmmEM5lQwXA/Witches-Ond-Warlocks%E2%84%A2?kind=proto&node-id=1-4955&page-id=0%3A1&scaling=scale-down&starting-point-node-id=1%3A4955">
+    </iframe>
   </div>
 
   <a class="email-button" href="mailto:markperry@witchesondwarlocks.com">
