--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
 
   <div class="section">
     <h2>📱 Mobile App Preview</h2>
-    <iframe
-      width="100%"
-      height="600"
-      allowfullscreen
-      src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/p8dBhYROthpVmmEM5lQwXA/Witches-Ond-Warlocks%E2%84%A2?kind=proto&node-id=1-4955&page-id=0%3A1&scaling=scale-down&starting-point-node-id=1%3A4955">
-    </iframe>
+    <div style="max-width: 400px; margin: 0 auto;">
+      <iframe
+        width="100%"
+        height="800"
+        allowfullscreen
+        src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/p8dBhYROthpVmmEM5lQwXA/Witches-Ond-Warlocks%E2%84%A2?kind=proto&node-id=1-4955&page-id=0%3A1&scaling=scale-down&starting-point-node-id=1%3A4955">
+      </iframe>
+    </div>
   </div>
 
   <a class="email-button" href="mailto:markperry@witchesondwarlocks.com">
