--- a/index.html
+++ b/index.html
@@ -51,12 +51,6 @@
     .email-button:hover {
       background-color: #5c0000;
     }
-    iframe {
-      max-width: 100%;
-      border-radius: 12px;
-      margin-top: 1em;
-      border: 2px solid #333;
-    }
   </style>
 </head>
 <body>
@@ -89,14 +83,7 @@
 
   <div class="section">
     <h2>📱 Mobile App Preview</h2>
-    <div style="max-width: 400px; margin: 0 auto;">
-      <iframe
-        width="100%"
-        height="800"
-        allowfullscreen
-        src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/p8dBhYROthpVmmEM5lQwXA/Witches-Ond-Warlocks%E2%84%A2?kind=proto&node-id=1-4955&page-id=0%3A1&scaling=scale-down&starting-point-node-id=1%3A4955">
-      </iframe>
-    </div>
+    <img src="assets/Trading_Card_Game.png" alt="Mobile App Preview" style="max-width: 90%; border-radius: 12px;">
   </div>
 
   <div class="section">
