--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
 
   <div class="section">
-    <h2>📱 Mobile App Preview</h2>
+    <h2>📱 Mobile Game Preview</h2>
     <div style="max-width: 400px; margin: 0 auto;">
       <iframe
         width="100%"
