--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
       margin-top: 1em;
       border: 2px solid #333;
     }
+
+    /* Puzzle Game Styles */
+    #puzzle-game {
+      position: relative;
+      margin: 0 auto;
+      margin-top: 1em;
+      border: 2px solid #333;
+      border-radius: 8px;
+    }
+    .tile {
+      position: absolute;
+      background-size: cover;
+      box-sizing: border-box;
+      border: 1px solid #222;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+    .tile.empty {
+      background: none;
+      cursor: default;
+    }
   </style>
 </head>
 <body>
@@ -104,8 +125,70 @@
     <img src="assets/Trademark_Label.png" alt="Trademark Logo" style="max-width: 30%;">
   </div>
 
+  <div class="section">
+    <h2>🎮 Play the Puzzle Game</h2>
+    <div id="puzzle-game"></div>
+  </div>
+
   <a class="email-button" href="mailto:markperry@witchesondwarlocks.com">
     📧 To become an authorized dealer, please email us
   </a>
+
+  <script>
+    const puzzleContainer = document.getElementById("puzzle-game");
+    const size = 4;
+    const tileSize = 150;
+    const emptyTile = { row: size - 1, col: size - 1 };
+    let board = [];
+
+    function createTile(row, col) {
+      const tile = document.createElement("div");
+      tile.classList.add("tile");
+      tile.style.width = tile.style.height = `${tileSize}px`;
+      tile.style.left = `${col * tileSize}px`;
+      tile.style.top = `${row * tileSize}px`;
+
+      const index = row * size + col + 1;
+      if (index < size * size) {
+        tile.style.backgroundImage = `url(tiles/tile_0_${index}.png)`;
+        tile.dataset.index = index;
+        tile.addEventListener("click", () => tryMove(row, col));
+      } else {
+        tile.classList.add("empty");
+      }
+
+      puzzleContainer.appendChild(tile);
+      return tile;
+    }
+
+    function tryMove(row, col) {
+      const dr = Math.abs(emptyTile.row - row);
+      const dc = Math.abs(emptyTile.col - col);
+      if ((dr === 1 && dc === 0) || (dr === 0 && dc === 1)) {
+        const clickedTile = board[row][col];
+        clickedTile.style.top = `${emptyTile.row * tileSize}px`;
+        clickedTile.style.left = `${emptyTile.col * tileSize}px`;
+        board[emptyTile.row][emptyTile.col] = clickedTile;
+        board[row][col] = null;
+        emptyTile.row = row;
+        emptyTile.col = col;
+      }
+    }
+
+    function initBoard() {
+      puzzleContainer.style.width = `${size * tileSize}px`;
+      puzzleContainer.style.height = `${size * tileSize}px`;
+
+      for (let r = 0; r < size; r++) {
+        board[r] = [];
+        for (let c = 0; c < size; c++) {
+          const tile = createTile(r, c);
+          board[r][c] = tile.classList.contains("empty") ? null : tile;
+        }
+      }
+    }
+
+    window.onload = initBoard;
+  </script>
 </body>
 </html>
