--- a/index.html
+++ b/index.html
@@ -121,11 +121,6 @@
   </div>
 
   <div class="section">
-    <h2>📛 Trademark Logo</h2>
-    <img src="assets/Trademark_Label.png" alt="Trademark Logo" style="max-width: 30%;">
-  </div>
-
-  <div class="section">
   <h2>🎮 Play the Puzzle Video Game</h2>
   <button onclick="resetPuzzle()" style="margin-bottom: 1em; padding: 10px 20px; font-size: 16px;">🔁 Reset Puzzle</button>
   <div id="puzzle-game"></div>
@@ -203,5 +198,14 @@
 
   window.onload = initBoard;
 </script>
+
+  <div class="section">
+    <h2>📛 Trademark Label</h2>
+    <img src="assets/Trademark_Label.png" alt="Trademark Label" style="max-width: 30%;">
+  </div>
+
+  <a class="email-button" href="mailto:markperry@witchesondwarlocks.com">
+    📧 To become an authorized dealer, please email us
+  </a>
 </body>
 </html>
