--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <p>Collectible trading cards and fantasy-themed apparel.</p>
 
   <div class="section">
-    <h2>🎴 Booster Packs (Front & Back)</h2>
+    <h2>🎴 Now Available for Purchase - Booster Packs (Front & Back)</h2>
     <div class="side-by-side">
       <img src="assets/Booster_Front.png" alt="Booster Pack Front">
       <img src="assets/Booster_Back.png" alt="Booster Pack Back">
@@ -104,7 +104,7 @@
   </div>
 
   <div class="section">
-    <h2>👕 Apparel Display (T-Shirt & Promo)</h2>
+    <h2>👕 Apparel Display (T-Shirt & Promo) Order Now</h2>
     <img src="assets/TShirt_Display.png" alt="T-Shirt and Card Display" style="max-width: 50%;">
   </div>
 
@@ -205,7 +205,7 @@
   </div>
 
   <a class="email-button" href="mailto:markperry@witchesondwarlocks.com">
-    📧 To become an authorized dealer, please email us
+    📧 To become an authorized dealer, please email us for pricing
   </a>
 </body>
 </html>
